# Cell_Atlas_MxIF

./: LICENSE  MANIFEST.in  README.rst  bitbucket-pipelines.yml  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini  version.txt
notebooks/: community_generation.ipynb  tessellation_example.ipynb
src/: setup.py
src/cell_typing/: expressions.py  setup.py  tessellation.py
src/community/: community_analysis.ipynb  graph_model.py  graph_utils.py  setup.py
src/permutation/: permutation.cpp  permutation.py  setup.py
src/plotting/: plot.py  setup.py  utils.py
src/submodule/: example.cpp  example.py  setup.py
tests/: test_submodule.py
