[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py37", "py38"] #py39 not supported yet

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
src_paths = ["src/"]
skip_gitignore = true

[tool.coverage.run]
branch = true
